--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.billyji.datenight">
+<manifest package="com.billyji.datenight"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -12,12 +12,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/plate"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        >
 
         <activity
             android:name="com.billyji.datenight.activities.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="sensorPortrait"
+            >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,13 +35,13 @@
         <activity
             android:name="com.billyji.datenight.activities.FoodChoiceActivity"
             android:label="@string/title_food_choices"
+            android:screenOrientation="sensorPortrait"
             android:parentActivityName="com.billyji.datenight.activities.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            >
 
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.billyji.datenight.activities.MainActivity" />
-
 
         </activity>
 
