--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         >
 
         <activity
-            android:name="com.billyji.datenight.activities.MainActivity"
+            android:name="com.billyji.datenight.ui.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="sensorPortrait"
@@ -33,15 +33,15 @@
             android:value="@string/yelp_api_key" />
 
         <activity
-            android:name="com.billyji.datenight.activities.FoodChoiceActivity"
+            android:name="com.billyji.datenight.ui.FoodChoiceActivity"
             android:label="@string/title_food_choices"
             android:screenOrientation="sensorPortrait"
-            android:parentActivityName="com.billyji.datenight.activities.MainActivity"
+            android:parentActivityName="com.billyji.datenight.ui.MainActivity"
             >
 
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.billyji.datenight.activities.MainActivity" />
+                android:value="com.billyji.datenight.ui.MainActivity" />
 
         </activity>
 
