--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,16 @@
             android:screenOrientation="sensorPortrait"
             >
 
+        </activity>
+
+
+        <activity android:name="com.billyji.datenight.activities.NetflixActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-        <activity android:name="com.billyji.datenight.activities.NetflixActivity"></activity>
 
 
         <meta-data
