--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.billyji.datenight"
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -30,7 +32,6 @@ repositories {
     flatDir {
         dirs 'libs'
     }
-    google()
 }
 
 dependencies {
@@ -39,7 +40,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile group: 'io.github.ranga543', name: 'yelp-fusion-client', version: '0.1.2'
+    compile group: 'io.github.ranga543', name: 'yelp-fusion-client', version: '0.1.4'
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
@@ -52,4 +53,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:11.4.2'
 
     testCompile 'junit:junit:4.12'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
