--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,11 @@ buildscript {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.51"
+        classpath 'com.android.tools.build:gradle:3.3.0-alpha10'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.70"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
