--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ repositories {
         dirs 'libs'
     }
     maven { url "https://jitpack.io" }
+    maven { url "https://dl.bintray.com/vitorhugods/AvatarView" }
 }
 
 dependencies {
@@ -52,6 +53,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'xyz.schwaab:avvylib:0.0.1'
     implementation 'com.github.arcadefire:nice-spinner:1.3.4', {
         exclude group: 'com.android.support', module: 'appcompat-7'
     }
