editing food selection page UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <activity
             android:name="com.billyji.datenight.ui.FoodChoiceActivity"
             android:label="@string/title_food_choices"
-            android:theme="@style/AppTheme"
+            android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="sensorPortrait"
             >
             <meta-data
